infra/modules/sg/vpc/main.tf
variable "vpc_id" {}
variable "sg_name" {}

resource "aws_security_group" "public_sg" {
    name = try(var.sg_name, "was_sg")
    vpc_id = var.vpc_id

    ingress {
        description = "SSH"
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        description = "HTTP"
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        description = "HTTPS"
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "was_sg"
    }
}

output "sg_id" {
    value = aws_security_group.public_sg.id
}
